IGNITE-21388 Remove default storage profile for LogicalNode